# create-a-new-service-generic-template

./: .env  .gitignore  .templatesyncignore  Dockerfile  README.md  development.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: template-sync.yml  workflow.yml
kubernetes/: config-map.yml  ingress.yml  scaled-object.yml  service.config-map.yml  service.ingress.yml  service.service.yml  service.stateful.yml  service.yml  stateful.yml
src/: main.py  my_service.py  utils.py
tests/: test_service.py  test_tasks.py
