[project]
name = "service" # Edit this and remove comment
version = "1.0.0"

requires-python = ">=3.10"
dependencies = [
  "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main"

]
[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
